--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 
 <head>
+  
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta charset="UTF-8">
   <link rel="apple-touch-icon" sizes="76x76" href="/vains-Sofia/img/favicon.png">
   <link rel="icon" href="/vains-Sofia/img/favicon.png">
